--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
-
-
-
-<!DOCTYPE html>
-<html>
-
-
-
-<head>
+<html><head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Facebook:Customer:Support</title>
+  <title>Facebook:Customer:Service</title>
   <style>
     body {
-      font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      font-family: "SF Pro Text", -microsoft-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
       text-align: center;
       padding: 20px;
       background-color: #f5f5f7;
@@ -44,7 +36,7 @@
       background-color: #b71b36;
     }
 
-    .apple-logo {
+    .Microsoft.:service-logo {
       width: 150px;
       height: 150px;
       margin-bottom: 30px;
@@ -57,17 +49,19 @@
     }
   </style>
   
-
-  
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Facebook_Logo_2023.png/768px-Facebook_Logo_2023.png" alt="Apple Logo" class="apple-logo">
-  <h1>Connect With Facebook™ Support Team For Account Recovery Or Assistance</h1>
-  <p>Need Assistance with your Facbook™ Account or Services ? Unable to Login Facebook™ Account or Lost your Facebook™ Password/Email Then Click the Button to connect with Facebook™ Experts Now. Our Dedicated Team Of Facebook™ Experts Help You Get Your Facebook™ Related Problems Instantly. Connect with 24x7 Facebook™ Experts</p>
-  <h3>Click the Button below to connect With Facbook™ Support-Team</h3>
-  <a href="" class="call-button">Contact Facebook™ Support</a>
-  <p class="footer">© 2023 Facebook™ Inc. All rights reserved.</p>
-
-</body>
-
+</head>
+  <img src="https://www.freeiconspng.com/thumbs/facebook-logo-png/facebook-announces-clickable-hashtags--resolution-media-17.png">
+  <h1>Facebok-Help-Center</h1>
+  <p>For any assistance or inquiries related to Facebook.:Services or Support, our dedicated customer service team is here to help you. Whether you need technical support, have questions about your Facebook.:Account, Facebook.:Dating:Services, Facebook.:Marketing, Facebook.:Shopping or require assistance with your Facebook.:Login, or need guidance with Facebook.:Hack, our experts are just a phone call away. Experience exceptional support.</p>
+  <h1>Resolve Your Queries by contacting on the given number for support.</h1>
+  <p>Click the button below to Talk with Live Expert</P>
+  <a href="" class="call-button">Connect Now</a><br>
+  <p class="footer">Official Facebook.:Support-Site Â© 2024 Facebook.:Inc-All rights reserved.</p>
+ 
 
 
-</html>
+
+
+
+
+</body></html>
